--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ console   = "0.15.8"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
 indicatif = "0.17.8"
 prost     = "0.13.3"
+
+[build-dependencies]
+prost-build = "0.13.3"
