--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-console   = "0.15.8"
 dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
-indicatif = "0.17.8"
+keyvalues-serde = "0.2.2"
 prost     = "0.13.3"
+serde = { version = "1.0.219", features = ["derive"] }
 
 [build-dependencies]
 prost-build = "0.13.3"
